# archzero

./: .dockerignore  .env.example  .env.production.example  .gitignore  ARB_IMPLEMENTATION_PLAN.md  CLEANUP.sh  CLEANUP_README.md  CLEANUP_SAFE.sh  CLEANUP_SAFETY_ANALYSIS.md  CLEANUP_WITH_BACKUP.sh  CODEBASE_STRUCTURE_ANALYSIS.md  DEPLOYMENT.md  DOCKER_QUICKSTART.md  GIT_BACKUP_STRATEGY.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  e2e-results-strategic-planning.json  init-db.sh
archzero-api/: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  PRINCIPLES_IMPLEMENTATION_SUMMARY.md  PRINCIPLES_QUICK_REFERENCE.md
archzero-api/archzero-api/config/: default.toml
archzero-api/config/: CLAUDE.md  default.toml
archzero-api/docs/: principles-implementation.md  risk-implementation-summary.md
archzero-api/migrations/: 001_add_performance_indexes.sql  002_query_analysis.sql  003_connection_pool_config.md  004_create_users_table.sql  005_add_auth_columns.sql  006_seed_arb_users.sql  007_update_user_roles.sql  008_create_arb_templates.sql  009_create_arb_audit_logs.sql  010_create_arb_notifications.sql  011_create_exports_table.sql  012_create_scheduled_exports_table.sql  013_create_report_templates_table.sql  CLAUDE.md
archzero-api/src/: CLAUDE.md  error.rs  lib.rs  main.rs  state.rs
archzero-api/src/config/: CLAUDE.md  mod.rs
archzero-api/src/handlers/: CLAUDE.md  arb.rs  auth.rs  bia.rs  bulk.rs  cache.rs  cards.rs  compliance.rs  csrf.rs  exceptions.rs  export.rs  graph.rs  health.rs  import.rs  initiatives.rs  migration.rs  mod.rs  policies.rs  principles.rs  relationships.rs  reports.rs  risks.rs  standards.rs  tco.rs  test_reset.rs  users.rs
archzero-api/src/middleware/: CLAUDE.md  auth.rs  csrf.rs  mod.rs  rate_limit.rs  security.rs
archzero-api/src/models/: CLAUDE.md  arb.rs  arb_audit_log.rs  arb_notification.rs  arb_template.rs  bia.rs  card.rs  compliance.rs  exceptions.rs  export.rs  initiatives.rs  migration.rs  mod.rs  policies.rs  principles.rs  relationship.rs  risks.rs  standards.rs  tco.rs  user.rs
archzero-api/src/services/: CLAUDE.md  arb_audit_service.rs  arb_notification_service.rs  arb_template_service.rs  auth_service.rs  bia_service.rs  cache.rs  cached_card_service.rs  card_service.rs  csrf.rs  db_service.rs  export_scheduler.rs  export_service.rs  migration_service.rs  mod.rs  neo4j_service.rs  rate_limit.rs  relationship_service.rs  report_service.rs  saga_service.rs  tco_service.rs  (+1 more)
archzero-api/tests/: phase2_integration_test.rs  phase2_smoke_test.rs
(+471 files in other folders)
