[package]
name = "archzero-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "archzero_api"
path = "src/lib.rs"

[[bin]]
name = "archzero-api"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-br", "limit"] }

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "uuid", "chrono", "json", "migrate"] }
neo4rs = "0.6"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.0"
bcrypt = "0.15"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Export functionality
csv = "1.3"

# Report generation
genpdf = "0.2"

# Scheduled jobs
tokio-cron-scheduler = "0.10"

# Async utilities
async-trait = "0.1"

# API Documentation
utoipa = { version = "4.0", features = ["axum_extras", "chrono", "uuid"] }
